--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
                         <div class="heading_part">
                             <img src="./images/logo.png" alt="logo">
                         </div>
-                        <div class="hero_con_text col-12 col-md-7 col-lg-6 text-center text-lg-start">
-                            <h2>Picture perfect</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                            </p>
+                        <div class="row">
+                            <div class="hero_con_text col-12 col-md-7 col-lg-6">
+                                <div class="text-center text-lg-start">
+                                    <h2>Picture perfect</h2>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -154,13 +158,13 @@
                                 <div class="power_text text-center text-md-start">
                                     <h2>More power</h2>
                                     <h2>behind every pixel.</h2>
-                                    <p>
+                                    <p class="ms-4 ms-md-0">
                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.  
                                     </p>
                                     <h6 class="">See the options   &rarr;</h6>
                                 </div>
                             </div>
-                            <div class="col-6 d-md-none"></div>
+                            <div class="d-none"></div>
                         </div>
                     </div>
                 </div>
