--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                             <div class="hero_con_text col-12 col-md-7 col-lg-6">
                                 <div class="text-center text-lg-start">
                                     <h2>Picture perfect</h2>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                                    <p>
+                                        Welcome to Take's Picture Perfect World of Photography.Capturing Moments That Are Truly Picture Perfect.Explore our gallery and witness the magic of picture-perfect moments frozen in time.
                                     </p>
                                 </div>
                             </div>
@@ -52,21 +53,21 @@
                             <div class="col-12 col-md-6">
                                 <h3>Start something new</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                    Welcome to Take's Photography, where every click tells a story and every frame is a canvas for emotion and artistry.Take's the creative force behind the lens, dedicated to capturing moments that transcend time.
                                 </p>
                                 <p>
-                                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.
+                                    From the early days of my journey with a camera in hand, I've been enamored with the power of photography. It's not just about taking pictures; it's about freezing moments, encapsulating emotions, and weaving them into visual tales. My love for this craft goes beyond the technical aspects – it's a profound appreciation for the magic that happens when light, composition, and narrative converge.
                                 </p>
                                 <p>
-                                    eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.
+                                    At Take Photography, my philosophy is simple: every photograph should be a masterpiece, a work of art that tells a unique story. I believe in the transformative power of a well-crafted image, whether it's a candid portrait, a breathtaking landscape, or the joyous celebration of a special day. Each photoshoot is an opportunity to create something timeless, something picture-perfect.
                                 </p>
                             </div>
                             <div class="col-12 col-md-6 mt-auto pb-4">
                                 <p>
-                                    Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. 
+                                    We are not just a photographer; We are your visual storyteller. My goal is to understand your vision, your story, and translate it into images that resonate.  
                                 </p>
                                 <p>
-                                    Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.
+                                    Whether it's the warmth of a family portrait, the excitement of a wedding day, or the simplicity of everyday life – We are committed to making your moments unforgettable.
                                 </p>
                             </div>
                         </div>
@@ -84,19 +85,49 @@
             <div class="container">
                 <div class="row g-0">
                     <div class="col-12 col-md-6 col-lg-4">
-                        <a href="#"><img src="./images/gallary_img1.png" class="w-100"  alt="img"></a>
+                        <div class="desgin py-4 px-5 ">
+                            <h3>Design quality</h3>
+                            <p>
+                                At Take, we believe that design is not just about aesthetics; it's a commitment to quality craftsmanship, meticulous attention to detail, and an unwavering pursuit of excellence. Our creations are more than visual compositions; they are a testament to the dedication we bring to every project.
+                            </p>
+                            <h5>Find Out more  &rarr;</h5>
+                        </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <a href="#"><img src="./images/gallary_img2.png" class="w-100" alt="img"></a>
+                        <div class="built py-4 px-5">
+                            <h3>Built to last</h3>
+                            <p>
+                                Aesthetics paired with substance – that's the essence of "Built to Last." Our designs are not fleeting trends; they are timeless expressions of enduring style and functionality. Whether it's furniture, technology, or any other product, we believe in creating items that remain relevant and appreciated for generations to come.
+                            </p>
+                            <h5>Find Out more &rarr;</h5>
+                        </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <a href="#"><img src="./images/gallary_img3.png" class="w-100" alt="img"></a>
+                        <div class="clients py-4 px-5">
+                            <h3>Our clients</h3>
+                            <p>
+                                In the world of Photography, we had the honor of collaborating with Clients. Their vision became our mission, and together, we brought to life a project that surpassed expectations. Our clients aren't just collaborators; they're partners in the pursuit of excellence.
+                            </p>
+                            <h5>Get insights  &rarr;</h5>
+                        </div>
                     </div>
                     <div class="col-12 col-lg-8 d-md-none d-lg-block">
-                        <a href="#"><img src="./images/gallary_img4.png" class="w-100" alt="img"></a>
+                        <div class="sign_up py-4 px-5">
+                            <h3>Sign up & see why</h3>
+                            <p class="para">
+                                Unlock a world of possibilities by joining our Take community. Sign up today, and discover why countless individuals have chosen to be part of our vibrant community.
+                            </p>
+                            <h5>Get Started Now  &rarr;</h5>
+                        </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
-                        <a href="#"><img src="./images/gallary_img5.png" class="w-100" alt="img"></a>
+                        <div class="perfect py-4 px-5">
+                            <h3>Perfect pictures</h3>
+                            <p>
+                                From weddings to portraits, events to landscapes, we believe that perfection knows no boundaries. Our diverse portfolio showcases a range of Perfect Pictures, each tailored to the unique personalities and stories of our clients.
+                            </p>
+                            <h5 class="mb-0" >Find Out more  &rarr;</h5>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -116,26 +147,26 @@
                             <div class="col-12 col-md-6 col-lg-3">
                                 <h4>Web based</h4>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    Our web-based approach ensures flexibility and accessibility, allowing you to manage tasks, access information, and collaborate effortlessly. Whether it's project management, data analysis, or communication tools, our web-based solutions empower you to stay productive on the go.
                                 </p>
                             </div>
                             <div class="col-12 col-md-6 col-lg-3">
                                 <h4>Performance</h4>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                    At the core of our philosophy is a relentless pursuit of excellence, pushing the boundaries of what's possible. Whether it's faster processing speeds, quicker response times, or enhanced functionality, we're dedicated to delivering a performance-driven solution that empowers you to achieve more. 
 
                                 </p>
                             </div>
                             <div class="col-12 col-md-6 col-lg-3">
                                 <h4>Clultral</h4>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                    Whether it's a multicultural event, product inspired by global traditions, or a service that respects diverse perspectives, we weave the essence of cultures into everything we do. Join us in creating a world where cultural appreciation isn't just a concept—it's a living, vibrant reality. 
                                 </p>
                             </div>
                             <div class="col-12 col-md-6 col-lg-3">
                                 <h4>Sustainability</h4>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                    Join us on the journey towards a healthier planet. Whether it's reducing our carbon footprint, promoting ethical sourcing, or fostering environmental awareness, sustainability is not just a goal—it's a shared responsibility. 
                                 </p>
                             </div>
                         </div>
@@ -159,7 +190,7 @@
                                     <h2>More power</h2>
                                     <h2>behind every pixel.</h2>
                                     <p class="ms-4 ms-md-0">
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.  
+                                        we believe in capturing more than just images; we capture moments infused with unparalleled power and significance. Our commitment goes beyond the frame—each pixel is a testament to the extraordinary force that resides in every fleeting moment.  
                                     </p>
                                     <h6 class="">See the options   &rarr;</h6>
                                 </div>
@@ -184,21 +215,21 @@
                         <h3>Reasons to get onboard</h3>
                         <div class="row mt-5">
                             <div class="col-12 col-md-6 col-lg-4">
-                                <h5>Web based</h5>
+                                <h4>Web based</h4>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                    Experience the freedom of a platform-independent system that adapts to your lifestyle. Embrace the future of convenience with our user-friendly web-based applications, designed to enhance your digital experience. Embrace the simplicity of "anytime, anywhere" accessibility and elevate your online interactions with our suite of web-based solutions.  
                                 </p>
                             </div>
                             <div class="col-12 col-md-6 col-lg-4">
-                                <h5>Team login</h5>
+                                <h4>Team login</h4>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                    Sign up for exclusive access to our premium photography service. Our community members are the first to know about exciting developments, ensuring you never miss out on the latest and greatest.Receive a regular dose of inspiration directly to your inbox. From photography, our newsletters are designed to spark creativity and keep you in the loop. 
                                 </p>
                             </div>
                             <div class="col-12 col-md-6 col-lg-4">
-                                <h5>Great Support</h5>
+                                <h4>Great Support</h4>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                    At Take, our commitment to excellence extends far beyond our products/services; it's ingrained in the support we provide. With our dedicated team, you're not just a client; you're a valued partner. Experience great support that's prompt, reliable, and tailored to your needs. 
                                 </p>
                             </div>
                         </div>
@@ -223,7 +254,7 @@
                                     <label>Legacy</label>
                                     <h3>Go it solo</h3>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                                        With Take, going solo isn't just a choice; it's a celebration of self-reliance and the courage to forge your unique path. Navigate the journey with confidence, backed by a solution crafted to amplify your individuality. Discover the strength that comes with going it solo and unlock your full potential with photoshoot.
                                     </p>
                                     <button type="button" class="btn btn-success px-4 py-2">Buy now $9</button>
                                     <i class="fa-brands fa-apple"></i>
@@ -237,7 +268,7 @@
                                     <label>Most Popular</label>
                                     <h3>Team Plan</h3>
                                     <p>
-                                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                                        Experience the power of synchronized efforts as our Team Plan offers tailored solutions for every member. From collaborative project management to shared resources and seamless communication channels, our platform ensures your team operates at its peak potential.
                                     </p>
                                     <button type="button" class="btn btn-success px-4 py-2">Buy now $18</button>
                                     <i class="fa-brands fa-apple"></i>
@@ -265,7 +296,7 @@
                             <div class="footer_con">
                                 <h5>Get in touch</h5>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                                    Ready to turn your ideas into reality? Have questions, or just want to say hello? We're here and eager to hear from you. Getting in touch is the first step toward unlocking possibilities. Whether you're exploring our services, seeking assistance, or looking to collaborate, we're just a message away. 
                                 </p>
                                 <div class="row g-3">
                                     <div class="col-6 col-md-4">
